--- a/Media15000/stylesheets/style.css
+++ b/Media15000/stylesheets/style.css
@@ -1,7 +1,8 @@
 body{
 	height:100%;
+	overflow:hidden;
 	margin:0px;
-	background-image: url("./images/background.png");
+	background-image: url("../images/background.png");
 	background-size:cover;
 	background-repeat:no-repeat;
 	background-position:center;
@@ -57,7 +58,21 @@ li a:hover{
 
 .text{
 	font-family: "Times New Roman", Times, serif;
+	/* font-weight: bold;
+	font-size: 125%; */
+
+	/* top:0px;
+	left:0px;
+	transform: translate(10px, 10px);  
+	margin-left: auto;
+	margin-right: auto;
+	width:50%;*/
+
+	display: block;
+	float: left;
+	width: 50%;
 	text-align: center;
+	
 }
 
 .text #gif{
